--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML>
 <html>
 <head>
-    <title>Old Macdonald Farm</title>
+    <title>Old macdonald Farm</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -116,4 +116,5 @@
     <script src="assets/js/main.js"></script>
 
 </body>
+
 </html>
